tests/gen-test/test_out/register struct init and use-parse-out.txt
error: expected '\n' | ';' but got ','
 --> register struct init and use\root.ctl:1:32
  |
1 | struct RegStruct { field : uint, } struct RegStruct2 { field : u32, field2 : u32, } #[entry] ; fn main -> uint {     RegStruct2 \ { field : 0 ; field2 : 1 } ; RegStruct \     { field : 0 }.field }
  |                                ^ token located here
  |
  = info: list -> item -> struct -> list

error: expected '\n' | ';' but got 'struct'
 --> register struct init and use\root.ctl:1:36
  |
1 | struct RegStruct { field : uint, } struct RegStruct2 { field : u32, field2 : u32, } #[entry] ; fn main -> uint {     RegStruct2 \ { field : 0 ; field2 : 1 } ; RegStruct \     { field : 0 }.field }
  |                                    ^^^^^^ token located here
  |
  = info: list

